--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -31,6 +31,27 @@
         android:hint="@string/email"
         android:inputType="textEmailAddress" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <TextView
+            android:id="@+id/profil_duzenle_txtDogumTarihi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.3" />
+
+        <Button
+            android:id="@+id/profil_duzenle_btnTakvim"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:text="@string/takvim" />
+    </LinearLayout>
+
+
     <Button
         android:id="@+id/profil_duzenle_btnguncelle"
         android:layout_width="match_parent"
