--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,9 +7,9 @@
             android:icon="@android:drawable/ic_menu_myplaces"
             android:title="@string/profil" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_cikis"
+            android:icon="@android:drawable/presence_offline"
+            android:title="@string/cikisyap" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
