--- a/app/src/main/res/layout/activity_add_todo.xml
+++ b/app/src/main/res/layout/activity_add_todo.xml
@@ -4,10 +4,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="@dimen/txtpaddig"
+    android:weightSum="1"
     tools:context="com.wissen.mesut.j6_5authentication.AddTodo">
 
-    <TextView
+    <EditText
+        android:id="@+id/add_txtYapilacak"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="0.9"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="top"
+        android:inputType="textMultiLine"
+        android:selectAllOnFocus="false"
+        android:textSize="@dimen/textsize" />
+
+    <Button
+        android:id="@+id/add_btnEkle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Merhaba" />
+        android:layout_marginTop="@dimen/txtmargintop"
+        android:layout_weight="0.1"
+        android:text="@string/ekle" />
 </LinearLayout>
