--- a/app/src/main/res/layout/todolist_item.xml
+++ b/app/src/main/res/layout/todolist_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="120dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -26,7 +26,6 @@
             android:layout_marginLeft="@dimen/txtpaddig"
             android:fontFamily="sans-serif-condensed"
             android:gravity="center_vertical"
-            android:text="Kamil"
             android:textSize="@dimen/textsize"
             android:textStyle="bold" />
     </LinearLayout>
@@ -52,7 +51,6 @@
             android:layout_weight="0.1"
             android:fontFamily="sans-serif-condensed"
             android:gravity="center_vertical"
-            android:text="TextView"
             android:textSize="@dimen/textsize" />
 
     </LinearLayout>
