--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="imgprofilen">50dp</dimen>
     <dimen name="imgprofilboy">50dp</dimen>
+    <dimen name="cardradius">5dp</dimen>
+    <dimen name="cardheight">120dp</dimen>
+    <dimen name="cardpadding">5dp</dimen>
 </resources>
