--- a/app/src/main/res/layout/todolist_card.xml
+++ b/app/src/main/res/layout/todolist_card.xml
@@ -32,7 +32,9 @@
                     android:layout_width="@dimen/imgprofilen"
                     android:layout_height="@dimen/imgprofilboy"
                     android:layout_gravity="center_vertical"
-                    app:srcCompat="@android:drawable/ic_menu_camera" />
+                    app:srcCompat="@android:drawable/ic_menu_camera"
+                    app:civ_border_color="@color/colorPrimaryLight"
+                    app:civ_border_width="1dp"/>
 
                 <TextView
                     android:id="@+id/card_txtKullaniciAdi"
