--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -15,9 +15,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/nav_userimg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.95"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <TextView
